--- a/Site_Terror_Sobrenatural/SITE-TERROR-SOBRENATURAL/home.html
+++ b/Site_Terror_Sobrenatural/SITE-TERROR-SOBRENATURAL/home.html
@@ -31,6 +31,28 @@
 
 	<h3>Seja bem vindo ao Sobrenatural aqui voce encontra o frio na espinha!!</h3>
 
+	<h3>Lorem ipsum dolor sit</h3>
+	<p>
+		Lorem ipsum dolor sit amet consectetur adipisicing elit. Et nobis reiciendis, temporibus voluptatibus nulla, maiores quas dolores magnam accusantium error animi, nam maxime odit! Nesciunt voluptatibus maxime quaerat facere esse!
+		Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda harum aut non inventore veniam veritatis. Consectetur earum ea nisi! Accusantium in nisi nobis odit, voluptas deleniti nesciunt repellat fugit perferendis?
+		Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, impedit ipsum natus qui voluptates possimus consequatur magni corrupti, dolorem ratione doloremque, dolore quibusdam? Impedit necessitatibus tempora, nobis delectus accusantium fugiat.
+	</p>
+
+	<h3>Lorem ipsum</h3>
+
+	<p>
+		Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia, dignissimos dicta. Architecto natus fugit laboriosam exercitationem ut harum quod rerum, nam enim assumenda iste hic expedita labore qui dolorum tempora.
+		Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo vel natus placeat ipsum magnam labore dolorum neque tempore nemo, repudiandae totam fugit, tenetur excepturi est obcaecati dolore quas culpa 
+		Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae facilis quis quas harum quos, neque sunt repellendus error atque non at, voluptate molestias necessitatibus aperiam voluptas, autem quam. Id, adipisci!
+	</p>
+	<h3>Lorem Ipsun Dollu</h3>
+
+	<p>
+		Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint cupiditate recusandae nostrum atque consequuntur eos, cum ex similique distinctio eum. Illum vero omnis magni rem vitae quos expedita? Amet, cumque.
+		Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro repudiandae labore expedita! Nostrum quia explicabo sapiente eveniet praesentium labore inventore! Architecto dolores magni blanditiis delectus accusamus. Possimus voluptas natus assumenda.
+		Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam possimus perferendis odio exercitationem! Harum illum, praesentium iusto fuga tempore officia consectetur eum vitae aut aliquid quisquam maiores amet esse magnam?
+	</p>
+
 	<!--<br>
 	<a target="_blank" href="https://www.gptplanet.com/?ref=decao"><img src="https://www.gptplanet.com/banners/banner2.png" border="0" width="100" height="100" /></a>
 	<br>
