Mais personalizações na Branch Design
mudei h3 personalizei a font,personalizei form,textarea,select option,

--- a/Site_Terror_Sobrenatural/SITE-TERROR-SOBRENATURAL/contato.html
+++ b/Site_Terror_Sobrenatural/SITE-TERROR-SOBRENATURAL/contato.html
@@ -44,7 +44,7 @@
 			<fieldset>
 				<legend>O que vc mais gostou no site?</legend>
 				<select class="sel">
-					<option disabled selected>..........</option>
+					<option disabled selected>Vote Aqui</option>
 					<option>Contos</option>
 					<option>Livros</option>
 					<option>Filmes</option>
