--- a/Site_Terror_Sobrenatural/SITE-TERROR-SOBRENATURAL/home.html
+++ b/Site_Terror_Sobrenatural/SITE-TERROR-SOBRENATURAL/home.html
@@ -22,12 +22,16 @@
 				<li><a href="contato.html">Contato</a></li>
 			</ol>
 		</div>	
+ 
 
-
-<section>
+<header>		
 	<h1>Terror Sobrenatural</h1>
 	<br>
 	<h2>O Assustador Bate a Sua Porta!</h2>
+</header>
+
+
+<section>
 
 	<h3>Seja bem vindo ao Sobrenatural aqui voce encontra o frio na espinha!!</h3>
 
