mais algumas midificações no header

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>TERROR-SOBRENATURAL</title>
+	
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Sobrenatural Terror">
@@ -9,6 +9,9 @@
 	<meta name="author" content="Valdecir Waldhelm">
 	<link href="css/style.css" type="text/css" rel="stylesheet" />
 	<link href="css/responsivo.css" type="text/css" rel="stylesheet" />
+	<!--icon-->
+	<link rel="shortcut icon" type="image-x/png" href="imagens/logo2.ico">
+	<title>TERROR-SOBRENATURAL</title>
 
 </head>
 	 
