efeito transition container

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link href="css/responsivo.css" type="text/css" rel="stylesheet" />
 	<!--icon-->
 	<link rel="shortcut icon" type="image-x/png" href="imagens/logo2.ico">
-	<title>TERROR-SOBRENATURAL</title>
+	<title>TERROR SOBRENATURAL</title>
 
 </head>
 	 
@@ -21,7 +21,7 @@
 	<div class="container-titulo">
 		<header id="home">
 			<div class="logo">
-				<a href="home.html"><h1>Terror Sobrenatural</h1></a>
+				<a href="index.html"><h1>Terror Sobrenatural</h1></a>
 				<h3>O assustador bate a sua porta</h3>
 			</div>
 				<div class="menu">
@@ -51,9 +51,11 @@
                     <!--mobile-->
 				</div> <!--menu-->	
 
-				<button>Login</button>
+				<!-- <button>Login</button> -->
 				
 		</header> <!--home-->
+		<div class="fantasma-1"></div> <!--fantasma 1-->
+		<div class="fantasma-2"></div> <!--fantasma 2-->
 	</div> <!--container-topo-->
 
 	<section class="container-apresentation">
