--- a/filmes.html
+++ b/filmes.html
@@ -10,7 +10,7 @@
 	<div class="interface">
 		<div class="menu">
 			<ol>
-				<li><a href="home.html">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li><a href="store.html">Store</a></li>
 				<li><a href="conto.html">Contos</a></li>
 				<li><a href="livros.html">Livros</a></li>
@@ -34,6 +34,9 @@
 	<a target="_blank" href="https://www.gptplanet.com/?ref=decao"><img src="https://www.gptplanet.com/banners/banner3.png" border="0" width="486" height="60" /></a>
 	<br>-->
 	
+	<section class="article">
+		
+	</section> <!--article-->
 	
 	
 
