--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 	<section class="container-apresentation">
 		<div class="container-video">
-
+			<h2>O melhor do Sobrenatural e aqui!</h2>
 		</div>
 	</section>
 
