mais algumas alterações
video no container

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 <body>
 
 	<div class="container-titulo">
+		<video autoplay muted loop class="video">
+            <source src="media/candle_2.mp4">
+        </video> <!--class video-->
 		<header id="home">
 			<div class="logo">
 				<a href="index.html"><h1>Terror Sobrenatural</h1></a>
